  Fixed
     1- slowdown in zeta (e.g. zeta(Pi) at \p500)
     2- GC error in idealinv [#2258]
     3- qfminim inefficiency (initial bound from non-LLL-reduced matrix)
     4- mfshimura in weight 3/2 => oo loop
     5- zetahurwitz(s, huge x) => overflow or very slow
     6- matsolve([1,1,1/2; 1,0,1/2; 2,1,0], [-1;1;-1]) -> SEGV [#2261]
     7- qfminim(Mat(1),,,2) -> precision error [#2262]

  Added
HC   1- new GP function eulerreal
BA   2- fplll: fast, dpe and heuristic variants

  Changed
HC   1- faster implementation of eulervec + cache result
     2- sumnummonieninit(,1): faster algorithm (complex step)

Done for version 2.13.0 (released 19/10/2020):
  Fixed
     1- sizebyte(objects containing t_LIST): would assign size 3 to all lists
     2- [Map(Mat([0, 0])), [0, 0, 1]] -> SEGV
     3- zeta(I+2^(-64)) -> SEGV
BA   4- permorder returned incorrect results for large orders
     5- p=[4,54]; lfunmf(mfinit(p,0), mftraceform(p,0)) -> oo loop
BA   6- printf("%5.2f",M) transposed M [#2252]
     7- bnfinit instability at low accuracy. E.g., at \p38
        P=x^7+22*x^6+184*x^5+764*x^4+2020*x^3+3792*x^2+5712*x+4;
        bnfinit(P,1).no -> 4 times too large
     8- accuracy problems in bnfisunit after bnfinit(P,1). E.g.,
        P=x^7-22*x^6+169*x^5-568*x^4+1263*x^3-1506*x^2+2295*x+2;
        setrand(1); K=bnfinit(P,1); U=bnfunits(K,idealprimedec(K,2));
        bnfisunit(K,4*(x^2-18*x+85)/x^2*Mod(1,K.pol),U) -> error

  Added
     1- examples/pari.f90: example FORTRAN binding
     2- [libpari] quodif
BA   3- [libpari] perm_sqr, perm_powu, perm_orderu
BA   4- asymptotically fast quadunit

  Changed
     1- faster intnumgaussinit + change default number of points to B/4,
        suitable when b - a ~ distance to the nearest pole
BA   2- [libpari] perm_pow now take a t_INT exponent
BA   3- [libpari] permorder and perm_order now return a t_INT.

Done for version 2.12.1 (released 16/09/2020):
  Fixed
BA   1- plotlines flag was ignored