@@ -59,3 +59,7 @@ subst(Mod(1/z,y),z,x)
 subst(Mod(-a,a^2-2),z,0)
 
 subst(((-6*t^2-t)*u^4+(t^2)*u^3+(P)*t^3*u)/u^2,t,0)
+
+\\#2264
+p=s1*x+s1*x^2+(1/2*s1^2+s1+s2)*x^3+(1/6*s1^3+3/2*s1^2+(s2+1)*s1+(s2+s3))*x^4+(1/24*s1^4+7/6*s1^3+(1/2*s2+3)*s1^2+(3*s2+(s3+1))*s1+(1/2*s2^2+2*s2+(s3+s4)))*x^5+(1/120*s1^5+5/8*s1^4+(1/6*s2+25/6)*s1^3+(7/2*s2+(1/2*s3+5))*s1^2+(1/2*s2^2+7*s2+(3*s3+(s4+1)))*s1+(3/2*s2^2+(s3+2)*s2+(s3+(s4+s5))))*x^6+(1/720*s1^6+31/120*s1^5+(1/24*s2+15/4)*s1^4+(5/2*s2+(1/6*s3+65/6))*s1^3+(1/4*s2^2+13*s2+(7/2*s3+(1/2*s4+15/2)))*s1^2+(7/2*s2^2+(s3+13)*s2+(6*s3+(3*s4+(s5+1))))*s1+(1/6*s2^3+9/2*s2^2+(3*s3+(s4+3))*s2+(1/2*s3^2+2*s3+(2*s4+(s5+s6)))))*x^7+(1/5040*s1^7+7/80*s1^6+(1/120*s2+301/120)*s1^5+(31/24*s2+(1/24*s3+175/12))*s1^4+(1/12*s2^2+91/6*s2+(5/2*s3+(1/6*s4+70/3)))*s1^3+(15/4*s2^2+(1/2*s3+36)*s2+(25/2*s3+(7/2*s4+(1/2*s5+21/2))))*s1^2+(1/6*s2^3+14*s2^2+(7*s3+(s4+22))*s2+(1/2*s3^2+11*s3+(7*s4+(3*s5+s6))))*s1+(7/6*s2^3+(1/2*s3+17/2)*s2^2+(7*s3+(3*s4+(s5+3)))*s2+(3/2*s3^2+(s4+2)*s3+(2*s4+(s5+(s6+s7))))))*x^8+O(x^9);
+subst(p, x, x); \\ takes oo time if content(p) is computed
