@@ -8,6 +8,7 @@ Done for version 2.14.0 (released ??/??/2020):
      5- zetahurwitz(s, huge x) => overflow or very slow
      6- matsolve([1,1,1/2; 1,0,1/2; 2,1,0], [-1;1;-1]) -> SEGV [#2261]
      7- qfminim(Mat(1),,,2) -> precision error [#2262]
+     8- subst(p, v, t_SER) very slow if p contains many variables [#2264]
 
   Added
 HC   1- new GP function eulerreal
